@@ -19,6 +19,7 @@
 * Iveri: Add AuthReversal for Authorizations [almalee24] #5201
 * Decidir & Braintree: Scrub cryptogram and card number [almalee24] #5220
 * Naranja: Update valid number check to include luhn10 [DustinHaefele] #5217
+* Cybersource: Add apple_pay with discover. [DustinHaefele] #5213
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
